apps/dssp-test-explain-error-01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-test-explain-error-01
  labels:
    backstage.io/kubernetes-id: dssp-test-explain-error-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-test-explain-error-01
  template:
    metadata:
      labels:
        app: dssp-test-explain-error-01
        backstage.io/kubernetes-id: dssp-test-explain-error-01
    spec:
      containers:
        - name: dssp-test-explain-error-01
          image: chaitanyapandeygspann/dssp-test-explain-error-01:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
