apps/dssp-test-explain-error-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-test-explain-error-01
spec:
  selector:
    app: dssp-test-explain-error-01
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-test-explain-error-01-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-test-explain-error-01.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-test-explain-error-01
#             port:
#               number: 80
